--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li>@Html.ActionLink("Registrieren", "Register", "Account")</li>
                     </ul>
                 }
-                else
+                else if(User.IsInRole("player"))
                 {
                     <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">
                         <li>@Html.ActionLink("<<" + CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).GamerTag + ">>", "UserProfile", "Account")</li>
@@ -37,8 +37,20 @@
                         <li>@Html.ActionLink("Deckbuilder", "Index", "DeckBuilder")</li>
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                     </ul>
-                        <p class="DiamantAnzeige"><img src="~/Content/Images/Diamant.png" /> @CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).AmountMoney.ToString()</p>           
+                        <p class="DiamantAnzeige"><img src="~/Content/Images/Diamant.png" /> @CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).AmountMoney.ToString()</p>
                 }
+                else if (User.IsInRole("admin"))
+                {
+                    <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">
+                        
+                        <li>@Html.ActionLink("Bestseller", "Bestseller", "Statistic")</li>
+                        
+                        <li>@Html.ActionLink("Datenpflege", "Datenpflege", "Shop")</li>
+                        
+                        <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                    </ul>
+                }
+
             </div>
         </div>
     </div>
