passwort ändern fertig

--- a/CardGame.Web/Views/Account/ChangePassword.cshtml
+++ b/CardGame.Web/Views/Account/ChangePassword.cshtml
@@ -11,7 +11,7 @@
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary("", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Email)
+            @*@Html.HiddenFor(model => model.Email)*@
            
             <div class="form-group">
                 @Html.LabelFor(m => m.CurrentPassword, new { @class = "col-md-2 control-label" })
