--- a/CardGame.Web/Views/Account/UserProfile.cshtml
+++ b/CardGame.Web/Views/Account/UserProfile.cshtml
@@ -58,8 +58,8 @@
                     </div>
                 </div>
 
-                @Html.ActionLink("Passwort ändern", "ChangePassword", "Account", new { @class = "PasswortÄndernLink" })
-
+                @Html.ActionLink("Passwort ändern", "ChangePassword", "Account", null, new { @class = "PasswortÄndernLink" })
+                
                 <div class="form-group">
                     <div class="col-md-12">
                         @Html.ActionLink("Bearbeiten", "EditUser", "Account", new { @class = "btn btn-submit"})
