--- a/CardGame.Web/Views/Shared/_Layout.cshtml
+++ b/CardGame.Web/Views/Shared/_Layout.cshtml
@@ -33,8 +33,9 @@
                     <ul class="nav navbar-nav navbar-right" style="margin-top:6px;">
                         <li>@Html.ActionLink("<<" + CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).GamerTag + ">>", "UserProfile", "Account")</li>
                         <li>@Html.ActionLink("Bestseller", "Bestseller", "Statistic")</li>
-                        <li>@Html.ActionLink("Shop", "ShopIndex", "Shop")</li>
+                        <li>@Html.ActionLink("Shop", "ShopIndex", "Shop")</li> 
                         <li>@Html.ActionLink("Deckbuilder", "Index", "DeckBuilder")</li>
+                        <li>@Html.ActionLink("Statistik", "BestellStatistik", "LAP")</li>
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                     </ul>
                         <p class="DiamantAnzeige"><img src="~/Content/Images/Diamant.png" /> @CardGame.DAL.Logic.UserManager.GetUserByEmail(User.Identity.Name).AmountMoney.ToString()</p>
@@ -46,8 +47,12 @@
                         <li>@Html.ActionLink("Bestseller", "Bestseller", "Statistic")</li>
                         
                         <li>@Html.ActionLink("Datenpflege", "Datenpflege", "Shop")</li>
+
+                        <li>@Html.ActionLink("Statistik", "BestellStatistik", "LAP")</li>
                         
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+
+
                     </ul>
                 }
 
