--- a/CardGame.Web/Views/Shop/ShopIndex.cshtml
+++ b/CardGame.Web/Views/Shop/ShopIndex.cshtml
@@ -106,10 +106,10 @@
             <tr>
                 @for (int i = 0; i < Model.diamantPacks.Count; i++)
                 {
-                    using (Html.BeginForm())
+                    using (Html.BeginForm("DiamantenpackErwerben", "Shop"))
                     {
                         <td>
-                            <input type="hidden" name="idCardPack" value="@Model.diamantPacks.ToList()[i].DiamantenPackId" />
+                            <input type="hidden" name="idDiamantenPack" value="@Model.diamantPacks.ToList()[i].DiamantenPackId" />
                             <input type="hidden" name="Packprice" value="@Model.cardPacks.ToList()[i].Price" />
                             <input type="submit" value="Kaufen" class="btn btn-submit" />
                         </td>
